--- a/mini-project/style.css
+++ b/mini-project/style.css
@@ -7,6 +7,15 @@ main{
 p{
     display: inline-block;
 }
+.p1,.p2{
+    height: 200px;
+    width: 300px;
+    background-color: rgb(247, 247, 221);
+    border: 4px solid black;
+    border-radius: 20px;
+    margin-right: 30px;
+}
 footer{
-    margin-top: 200px;
+    margin-top: 100px;
+    margin-right: 30px;
 }
